--- a/Views/Item/Index.cshtml
+++ b/Views/Item/Index.cshtml
@@ -15,7 +15,7 @@
             @foreach (var item in Model)
             {
                 <li class="tm_t">
-                    <h3>@item.ItemName</h3>
+                    <h3>@item.CreatedByUserId</h3>
                     <div class="tm_td">@item.ItemDescription</div>
                     @{
                         if (Dnn.ModuleContext.IsEditable)
