--- a/module.css
+++ b/module.css
@@ -12,3 +12,31 @@ table {
     background-color: #401114;
     margin: 10px;
 }
+#AButton {
+    cursor: pointer;
+    background-color: #401114;
+    text-align:center;
+    vertical-align:central !important;
+    color: white;
+    font-weight: bold;
+    border: 1px solid #5a191b;
+    width: 50px;
+    height: 50px;
+    -moz-border-radius: 25px;
+    -webkit-border-radius: 25px;
+    border-radius: 25px;
+}
+#BButton {
+    cursor: pointer;
+    background-color: #401114;
+    text-align: center;
+    vertical-align: central !important;
+    color: white;
+    font-weight: bold;
+    border: 1px solid #5a191b;
+    width: 50px;
+    height: 50px;
+    -moz-border-radius: 25px;
+    -webkit-border-radius: 25px;
+    border-radius: 25px;
+}
