Settings changed, categories are shown in a dropdownlist

--- a/Views/MenuCategory/Index.cshtml
+++ b/Views/MenuCategory/Index.cshtml
@@ -79,6 +79,7 @@
         <div id="AContainer" style="display: none;">
             <table>
                 <thead>
+                    <a href="~/DesktopModules/MVC/MenuModul/Views/MenuCategory/Index.cshtml">~/DesktopModules/MVC/MenuModul/Views/MenuCategory/Index.cshtml</a>
                     <tr>
                         <th>Hétfő</th>
                         <th>Kedd</th>
